# LinuxDevelopment2023

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  const.c  fun.c  outlib.h  prog.c
03_Text/: randomize.sh
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  libprotect.c  move.c  test0.sh  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test_protect.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_I18n/: Makefile.am  configure.ac  game.c  game.pot  ru.po
09_PatchDiff/: Makefile  maze.c  v2.patch  v3.patch  v4.patch
10_Testing/: Makefile.am  configure.ac
10_Testing/src/: Makefile.am  buf.h  libbuf.c
10_Testing/tests/: Makefile.am  grow.c  init.c  null_pointer.c  pop.c  push.c  utils.h
